frontend/scss/molecules/_m-listing.scss
/* ... */
.m-listing__img::before {
  content: '';
  display: block;
  height: 0;
  padding-bottom: percentage(2 / 3); // 3:2
}

.m-listing__img--square::before {
  padding-bottom: 100%; // 1:1
}

.m-listing__img--tall::before {
  padding-bottom: percentage(4 / 3); // 3:4
}

.m-listing__img--wide::before {
  padding-bottom: percentage(9 / 16); // 16:9
}

.m-listing__img--extra-wide::before {
  padding-bottom: percentage(9 / 21); // 21:9
}

.m-listing__img::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  height: 0;
  background-color: $color__link;
  transition: all .25s $bezier--ease-out-circ;

  .m-listing--limited & {
    background-color: $color__text--limited;
  }

  .m-listing--new & {
    background-color: $color__text--new;
  }

  .m-listing--membership & {
    background-color: $color__text--membership;
  }

  .m-listing__link:hover &,
  .m-listing__link:focus & {
    height: 4px;
  }
}

.m-listing__img img,
.m-listing__img video {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.m-listing__img--contain img,
.m-listing__img--contain video {
  object-fit: contain;
}

  .m-listing__img--tall.m-listing__img--contain img,
  .m-listing__img--tall.m-listing__img--contain video {
    object-position: center top;
  }


.m-listing__meta {
  display: flex;
  flex: 1 0 auto;
  flex-flow: column nowrap;
  min-height: 128px;
  padding-top: .02px;
  padding-bottom: .02px;

  @include breakpoint('medium+') {
    min-height: 132px;
  }

  @include breakpoint('large+') {
    min-height: 144px;
  }
}

    .m-listing__meta--l {
      min-height: 168px;

      @include breakpoint('medium+') {
        min-height: 176px;
      }

      @include breakpoint('large+') {
        min-height: 184px;
      }
    }

.m-listing__meta:first-child {
  min-height: 0;
}

.m-listing__meta > * {
  flex: 0 0 auto;
}

.m-listing__meta > br {
  display: none;
}

.m-listing__meta-bottom {
  display: block;
  margin-top: auto;
}

.m-listing__meta .type,
.m-listing__meta .title,
.m-listing__meta .date {
  display: block;
}


.m-listing.s-no-link .title {
  color: $color__text--secondary;
}

.m-listing__link:hover .title {
  opacity: .9;
}

.m-listing__meta .f-tag {
  @include tucked-margin-top($f-tag, ('xsmall': 32, 'large+': 28));
}

.m-listing__meta .f-headline-editorial {
  @include tucked-margin-top($f-headline-editorial, ('xsmall': 36, 'small+': 60, 'medium+': 64));
}

.m-listing__meta .f-list-2 {
  @include tucked-margin-top($f-list-2, ('xsmall': 32));
}

.m-listing__meta .f-list-3 {
  @include tucked-margin-top($f-list-3, ('xsmall': 32));
}

.m-listing__meta .f-list-4 {
  @include tucked-margin-top($f-list-4, ('xsmall': 32, 'large+': 40));
}

.m-listing__meta .f-list-5 {
  @include tucked-margin-top($f-list-5, ('xsmall': 32, 'small+': 44, 'medium+': 40, 'large+': 48));
}

.m-listing__meta .f-subheading-1 {
  @include tucked-margin-top($f-subheading-1, ('xsmall': 28));
}

.m-listing__meta .f-body {
  @include tucked-margin-top($f-body, ('xsmall': 48));
}

.m-listing__meta .subtitle.f-body {
  @include tucked-margin-top($f-body, ('xsmall': 28));
}

.m-listing__meta .f-secondary {
  @include tucked-margin-top($f-secondary, ('xsmall': 36));
}

.m-listing__meta .f-link {
  @include tucked-margin-top($f-secondary, ('xsmall': 28));
}

.m-listing__meta .f-caption {
  @include tucked-margin-top($f-caption, ('xsmall': 36));
}

.m-listing__meta .f-body-editorial {
  @include tucked-margin-top($f-body-editorial, ('xsmall': 40));
  color: $color__text;
}


@each $name, $point in $breakpoints {
  @if ($name != 'xsmall') {
    @include breakpoint('#{$name}') {
      .m-listing--row .m-listing__meta .f-headline-editorial:first-child {
        @include tucked-align-top($f-headline-editorial, $name);
      }

      .m-listing--row .m-listing__meta .f-list-1:first-child {
        @include tucked-align-top($f-list-1, $name);
      }

      .m-listing--row .m-listing__meta .f-list-2:first-child {
        @include tucked-align-top($f-list-2, $name);
      }

      .m-listing--row .m-listing__meta .f-list-3:first-child {
        @include tucked-align-top($f-list-3, $name);
      }

      .m-listing--row .m-listing__meta .f-list-4:first-child {
        @include tucked-align-top($f-list-4, $name);
      }

      .m-listing--row .m-listing__meta .f-list-5:first-child {
        @include tucked-align-top($f-list-5, $name);
      }

      .m-listing--row .m-listing__meta .f-tag:first-child {
        @include tucked-align-top($f-tag, $name);
      }
    }
  }
}


.m-listing__meta .f-secondary + br + .f-secondary {
  color: $color__text--tertiary;
}

.m-listing__meta .f-list-3 + br + .f-link,
.m-listing__meta .f-secondary + br + .f-link {
  @include tucked-margin-top($f-secondary, ('xsmall': 36));
}

// variant `m-listing--feature`

@include breakpoint('small+') {
  .m-listing--feature .m-listing__link {
    display: block;
    position: relative;
    height: auto;
  }

  .m-listing--feature .m-listing__img {
    display: block;
    position: relative;
    max-height: 95vh;
    overflow: hidden;
  }

  .m-listing--feature .m-listing__img::before {
    padding-bottom: percentage(9 / 16); // 16:9
  }

  .m-listing--feature .m-listing__img::after {
    content: none;
    display: none;
  }

  .m-listing--feature .m-listing__meta {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    min-height: 0;
    padding: 20px;
    background-color: rgba(0,0,0,.25);

    @include breakpoint('large+') {
      padding: 40px;
    }
  }

  .m-listing--feature .m-listing__link:hover .m-listing__meta {
    background-color: rgba(0,0,0,.3);
  }

  .m-listing--feature .type,
  .m-listing--feature .title,
  .m-listing--feature .date {
    color: $color__text--title-contrast;
  }

  .m-listing--feature .m-listing__link:hover .title {
    color: $color__text--title-contrast;
    opacity: 1;
  }
}
/* ... */

